package nl.hu.cisq1.lingo.trainer.domain;

public enum Mark {
    ABSENT,
    CORRECT,
    INVALID,
    PRESENT,
}
