package nl.hu.cisq1.lingo.trainer.presentation.dto;

public class GuessDto {
    public Long id;
    public String guess;
}
